<?xml version="1.0" encoding="utf-8"?>
<!-- OK! -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/BackgroundColour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bit603.a2.UserAddModActivity">

    <include layout="@layout/t_titlebar"
        android:id="@+id/titlebar"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="10dp"
        android:orientation="vertical"
        android:verticalSpacing="10dp"
        app:layout_constraintTop_toBottomOf="@+id/titlebar"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/ChefText"
            style="@style/RecipeNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:text="@string/chefText"
            android:textColor="@color/TextColour"
            app:layout_constraintTop_toBottomOf="@layout/t_titlebar" />

        <TextView
            android:id="@+id/userName"
            style="@style/RecipeNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_background"
            android:editable="true"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:hint="@string/usernameHint"
            android:lines="1"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp"
            android:textColorHint="@color/blueHintColour" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <!--android:layout_weight="1"-->

        <Button
            android:id="@+id/userRecipeBtn"
            style="@style/BackgroundColour"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/rounded_button"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/userRecipeBtn"
            android:textColor="@color/BtnTextColour"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/developerText" />

        <TextView
            android:id="@+id/developerText"
            style="@style/RecipeNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:text="@string/developer"
            android:paddingHorizontal="7dp"
            android:paddingVertical="10dp"
            android:textColor="@color/TextColour"
            android:textSize="15sp"
            tools:layout_editor_absoluteY="538dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>