<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundColour"
    tools:context="com.bit603.a2.ShowRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="top"
        android:gravity="top"
        android:orientation="vertical">
        <include layout="@layout/t_titlebar" />


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:foregroundGravity="top">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|top"
                android:layout_margin="10dp"
                android:foregroundGravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/recipeTitle"
                        style="@style/PrepCookText"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="recipeTitle"
                        android:textColor="@color/TextColour"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/heart"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:onClick="heartOnClick"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/heart" />

                </LinearLayout>

                <TextView
                    android:id="@+id/recipePrepTitle"
                    style="@style/PrepCookText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/recipePrepTitle"
                    android:textColor="@color/TextColour"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    android:id="@+id/recipeEstTime"
                    style="@style/PrepCookText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberSigned"
                    android:padding="10dp"
                    android:text="10"
                    android:textColor="@color/TextColour"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/recipePrepTitle"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <TextView
                    android:id="@+id/descriptionTitle"
                    style="@style/PrepCookText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descriptionTitle"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textColor="@color/TextColour"
                    app:layout_constraintStart_toStartOf="@+id/recipePrepTitle"
                    app:layout_constraintTop_toBottomOf="@+id/recipePrepTitle" />

                <TextView
                    android:id="@+id/recipeDescription"
                    style="@style/PrepCookText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="@color/TextColour"
                    android:text="description"
                    app:layout_constraintStart_toStartOf="@+id/descriptionTitle"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTitle" />

                <TextView
                    android:id="@+id/ingredientsTitle"
                    style="@style/PrepCookText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredientsTitle"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textColor="@color/TextColour"
                    app:layout_constraintStart_toStartOf="@+id/recipeDescription"
                    app:layout_constraintTop_toBottomOf="@+id/recipeDescription"/>

                <TextView
                    android:id="@+id/recipeIngredients"
                    style="@style/PrepCookText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="Ingredients"
                    android:padding="10dp"
                    android:textColor="@color/TextColour"
                    app:layout_constraintStart_toStartOf="@+id/recipeDescription"
                    app:layout_constraintTop_toBottomOf="@+id/ingredientsTitle" />

                <TextView
                    android:id="@+id/methodTitle"
                    style="@style/PrepCookText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/methodTitle"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:textColor="@color/TextColour"
                    app:layout_constraintStart_toStartOf="@+id/recipeDescription"
                    app:layout_constraintTop_toBottomOf="@+id/recipeIngredients" />

                <TextView
                    android:id="@+id/recipeMethod"
                    style="@style/PrepCookText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:text="Method"
                    android:padding="10dp"
                    android:textColor="@color/TextColour"
                    app:layout_constraintStart_toStartOf="@+id/recipeDescription"
                    app:layout_constraintTop_toBottomOf="@+id/methodTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/userFaveBtn"
                style="@style/BackgroundColour"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:background="@drawable/rounded_button"
                android:padding="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="Favourited by:"
                android:textColor="@color/BtnTextColour"
                android:textSize="15dp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/developerText" />

            <TextView
                android:id="@+id/FavouriteList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:padding="10dp"
                android:textColor="@color/TextColour"
                android:text="" />
        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>